--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,11 @@ repository = "https://github.com/LiteSVM/litesvm"
 rust-version = "1.86.0"
 
 [workspace.dependencies]
-agave-feature-set = "~3.1"
-agave-precompiles = "~3.1"
-agave-reserved-account-keys = "~3.1"
-agave-syscalls = "~3.1"
+# Local agave fork dependencies
+agave-feature-set = { path = "../agave/feature-set" }
+agave-precompiles = { path = "../agave/precompiles" }
+agave-reserved-account-keys = { path = "../agave/reserved-account-keys" }
+agave-syscalls = { path = "../agave/syscalls" }
 ansi_term = "0.12"
 bincode = "1.3"
 bv = "0.11.1"
@@ -31,20 +32,21 @@ napi-build = "2.3.1"
 napi-derive = "3.3.3"
 qualifier_attr = "0.2.2"
 serde = "1.0"
+serde_json = "1.0"
 smallvec = "1.13"
 solana-account = "~3.2"
 solana-address-lookup-table-interface = "~3.0"
-solana-bpf-loader-program = "~3.1"
-solana-builtins = "~3.1"
+solana-bpf-loader-program = { path = "../agave/programs/bpf_loader" }
+solana-builtins = { path = "../agave/builtins" }
 solana-clock = "~3.0"
-solana-compute-budget = "~3.1"
-solana-compute-budget-instruction = "~3.1"
+solana-compute-budget = { path = "../agave/compute-budget" }
+solana-compute-budget-instruction = { path = "../agave/compute-budget-instruction" }
 solana-compute-budget-interface = "~3.0"
 solana-config-interface = "2.0.0"
 solana-ed25519-program = "~3.0"
 solana-epoch-rewards = "~3.0"
 solana-epoch-schedule = "~3.0"
-solana-fee = "~3.1"
+solana-fee = { path = "../agave/fee" }
 solana-fee-structure = "~3.0"
 solana-hash = "~3.1"
 solana-instruction = "~3.1"
@@ -61,9 +63,10 @@ solana-precompile-error = "~3.0"
 solana-program-error = "~3.0"
 solana-program-option = "~3.0"
 solana-program-pack = "~3.0"
-solana-program-runtime = "~3.1"
+solana-program-runtime = { path = "../agave/program-runtime" }
 solana-pubkey = "~3.0"
 solana-rent = "~3.0"
+solana-sbpf = { path = "../" }
 solana-sdk-ids = "~3.1"
 solana-secp256k1-program = "~3.0"
 solana-sha256-hasher = "~3.1"
@@ -72,16 +75,16 @@ solana-signer = "~3.0"
 solana-slot-hashes = "~3.0"
 solana-slot-history = "~3.0"
 solana-stake-interface = "2.0.1"
-solana-svm-callback = "~3.1"
-solana-svm-log-collector = "~3.1"
-solana-svm-timings = "~3.1"
-solana-svm-transaction = "~3.1"
+solana-svm-callback = { path = "../agave/svm-callback" }
+solana-svm-log-collector = { path = "../agave/svm-log-collector" }
+solana-svm-timings = { path = "../agave/svm-timings" }
+solana-svm-transaction = { path = "../agave/svm-transaction" }
 solana-system-interface = "2.0"
-solana-system-program = "~3.1"
+solana-system-program = { path = "../agave/programs/system" }
 solana-sysvar = "~3.1"
 solana-sysvar-id = "~3.1"
 solana-transaction = "~3.0"
-solana-transaction-context = "~3.1"
+solana-transaction-context = { path = "../agave/transaction-context" }
 solana-transaction-error = "~3.0"
 solana-vote-interface = "4.0"
 spl-associated-token-account-interface = "2.0"
