--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ solana-program-pack = "~3.0"
 solana-program-runtime = { path = "../agave/program-runtime" }
 solana-pubkey = "~3.0"
 solana-rent = "~3.0"
-solana-sbpf = { path = "../" }
+solana-sbpf = { git = "https://github.com/TraceSVM/sbpf.git" }
 solana-sdk-ids = "~3.1"
 solana-secp256k1-program = "~3.0"
 solana-sha256-hasher = "~3.1"
