--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ rust-version = "1.86.0"
 
 [workspace.dependencies]
 # Local agave fork dependencies
-agave-feature-set = { path = "../agave/feature-set" }
-agave-precompiles = { path = "../agave/precompiles" }
-agave-reserved-account-keys = { path = "../agave/reserved-account-keys" }
-agave-syscalls = { path = "../agave/syscalls" }
+agave-feature-set = { git = "https://github.com/TraceSVM/agave.git" }
+agave-precompiles = { git = "https://github.com/TraceSVM/agave.git" }
+agave-reserved-account-keys = { git = "https://github.com/TraceSVM/agave.git" }
+agave-syscalls = { git = "https://github.com/TraceSVM/agave.git" }
 ansi_term = "0.12"
 bincode = "1.3"
 bv = "0.11.1"
@@ -36,17 +36,17 @@ serde_json = "1.0"
 smallvec = "1.13"
 solana-account = "~3.2"
 solana-address-lookup-table-interface = "~3.0"
-solana-bpf-loader-program = { path = "../agave/programs/bpf_loader" }
-solana-builtins = { path = "../agave/builtins" }
+solana-bpf-loader-program = { git = "https://github.com/TraceSVM/agave.git" }
+solana-builtins = { git = "https://github.com/TraceSVM/agave.git" }
 solana-clock = "~3.0"
-solana-compute-budget = { path = "../agave/compute-budget" }
-solana-compute-budget-instruction = { path = "../agave/compute-budget-instruction" }
+solana-compute-budget = { git = "https://github.com/TraceSVM/agave.git" }
+solana-compute-budget-instruction = { git = "https://github.com/TraceSVM/agave.git" }
 solana-compute-budget-interface = "~3.0"
 solana-config-interface = "2.0.0"
 solana-ed25519-program = "~3.0"
 solana-epoch-rewards = "~3.0"
 solana-epoch-schedule = "~3.0"
-solana-fee = { path = "../agave/fee" }
+solana-fee = { git = "https://github.com/TraceSVM/agave.git" }
 solana-fee-structure = "~3.0"
 solana-hash = "~3.1"
 solana-instruction = "~3.1"
@@ -63,7 +63,7 @@ solana-precompile-error = "~3.0"
 solana-program-error = "~3.0"
 solana-program-option = "~3.0"
 solana-program-pack = "~3.0"
-solana-program-runtime = { path = "../agave/program-runtime" }
+solana-program-runtime = { git = "https://github.com/TraceSVM/agave.git" }
 solana-pubkey = "~3.0"
 solana-rent = "~3.0"
 solana-sbpf = { git = "https://github.com/TraceSVM/sbpf.git" }
@@ -75,16 +75,16 @@ solana-signer = "~3.0"
 solana-slot-hashes = "~3.0"
 solana-slot-history = "~3.0"
 solana-stake-interface = "2.0.1"
-solana-svm-callback = { path = "../agave/svm-callback" }
-solana-svm-log-collector = { path = "../agave/svm-log-collector" }
-solana-svm-timings = { path = "../agave/svm-timings" }
-solana-svm-transaction = { path = "../agave/svm-transaction" }
+solana-svm-callback = { git = "https://github.com/TraceSVM/agave.git" }
+solana-svm-log-collector = { git = "https://github.com/TraceSVM/agave.git" }
+solana-svm-timings = { git = "https://github.com/TraceSVM/agave.git" }
+solana-svm-transaction = { git = "https://github.com/TraceSVM/agave.git" }
 solana-system-interface = "2.0"
-solana-system-program = { path = "../agave/programs/system" }
+solana-system-program = { git = "https://github.com/TraceSVM/agave.git" }
 solana-sysvar = "~3.1"
 solana-sysvar-id = "~3.1"
 solana-transaction = "~3.0"
-solana-transaction-context = { path = "../agave/transaction-context" }
+solana-transaction-context = { git = "https://github.com/TraceSVM/agave.git" }
 solana-transaction-error = "~3.0"
 solana-vote-interface = "4.0"
 spl-associated-token-account-interface = "2.0"
